--- a/main.css
+++ b/main.css
@@ -15,11 +15,11 @@ padding:30px;
 }
 
 @import url(https://fonts.googleapis.com/css?family=Nunito&display=swap);body {
-    background-color: #eee;
-    margin: 0;
     font-family: 'Nunito', sans-serif;
    }
-
+   p {
+    font-size: 16px;
+  }
 
 /*
 
